<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfirmarActivity"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/letratitulo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre"/>
        <TextView
            android:id="@+id/nombreConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fechanacimineto" />

        <TextView
            android:id="@+id/fechaConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tel"/>
        <TextView
            android:id="@+id/telConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/emaill"/>
        <TextView
            android:id="@+id/emailConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/descripcion"/>
        <TextView
            android:id="@+id/descripcionConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/boton"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnedit"/>

</LinearLayout>