<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="20dp"
    android:orientation="vertical">

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/fullname"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:hint="@string/fullName"
                   android:textColor="@color/colorAccent">

               </com.google.android.material.textfield.TextInputEditText>
           </com.google.android.material.textfield.TextInputLayout>

           <DatePicker
               android:id="@+id/date"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="4dp">

           </DatePicker>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4dp">
               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/phoneNumber"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:hint="@string/phone"
                   android:textColor="@color/colorAccent"
                   android:inputType="phone">

               </com.google.android.material.textfield.TextInputEditText>
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4dp">
               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/email"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:hint="@string/email"
                   android:textColor="@color/colorAccent">

               </com.google.android.material.textfield.TextInputEditText>
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4dp">
               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/desciption"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:hint="@string/Desciption"
                   android:textColor="@color/colorAccent">

               </com.google.android.material.textfield.TextInputEditText>
           </com.google.android.material.textfield.TextInputLayout>

           <Button
               android:id="@+id/btnNext"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:background="@drawable/boton"
               android:text="@string/btntext"
               android:textColor="@color/colorPrimaryDark"/>

       </LinearLayout>

   </androidx.core.widget.NestedScrollView>



</LinearLayout>